<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VIT Silent Mode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hi!\nI\'m Ishan Khandelwal, a computer science student from Vellore Institute of Technology.\nI take immense pleasure in presenting before you my first ever android app- the VIT Silent Mode!!!\n\nVIT Silence Mode is an android application for all VITians!\nThis app can make your phone to go into the vibration mode according to your time table!\n
        So say good bye to those awkward moments when your phone rings loudly in the middle of the lectures of the strict profs..\n
        Just feed your time table into the app once and forget about toggling the phone between the normal mode and the vibration mode.\nAll feedback and valuable suggestions are welcomed.</string>
    <string name="slots">Slots</string>
    <string name="enable">Enable</string>
    <string name="a1">A1</string>
    <string name="b1">B1</string>
    <string name="c1">C1</string>
    <string name="d1">D1</string>
    <string name="e1">E1</string>
    <string name="f1">F1</string>
    <string name="g1">G1</string>
    <string name="submit">Submit</string>
    <string name="button">button</string>
    <string name="morning_slots">Morning Slots</string>
    <string name="ta1">TA1</string>
    <string name="tb1">TB1</string>
    <string name="tc1">TC1</string>
    <string name="td1">TD1</string>
    <string name="te1">TE1</string>
    <string name="tf1">TF1</string>
    <string name="tg1">TG1</string>
    <string name="a2">A2</string>
    <string name="ta2">TA2</string>
    <string name="b2">B2</string>
    <string name="tb2">TB2</string>
    <string name="c2">C2</string>
    <string name="tc2">TC2</string>
    <string name="d2">D2</string>
    <string name="td2">TD2</string>
    <string name="e2">E2</string>
    <string name="te2">TE2</string>
    <string name="f2">F2</string>
    <string name="tf2">TF2</string>
    <string name="g2">G2</string>
    <string name="tg2">TG2</string>
    <string name="evening_slots">Evening Slots</string>
    <string name="button2">button2</string>
    <string name="vitlogo">VITlogo</string>

    <color name="white">#FFFFFF</color>

    <string name="time_table">time table</string>
    <string name="about_me">About Me</string>
    <string name="blank_time_table">blank time table</string>
    <string name="about">About</string>
    <string name="labs">LABS</string>
    <string name="lab_button">lab button</string>
    <string name="lab_slots">Lab Slots</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l31">L31</string>
    <string name="l32">L32</string>
    <string name="l3">L3</string>
    <string name="l4">L4</string>
    <string name="l33">L33</string>
    <string name="l34">L34</string>
    <string name="l5">L5</string>
    <string name="l6">L6</string>
    <string name="l35">L35</string>
    <string name="l36">L36</string>
    <string name="l7">L7</string>
    <string name="l8">L8</string>
    <string name="l37">L37</string>
    <string name="l38">L38</string>
    <string name="l9">L9</string>
    <string name="l10">L10</string>
    <string name="l39">L39</string>
    <string name="l40">L40</string>
    <string name="l11">L11</string>
    <string name="l12">L12</string>
    <string name="l41">L41</string>
    <string name="l42">L42</string>
    <string name="l13">L13</string>
    <string name="l14">L14</string>
    <string name="l43">L43</string>
    <string name="l44">L44</string>
    <string name="l15">L15</string>
    <string name="l16">L16</string>
    <string name="l45">L45</string>
    <string name="l46">L46</string>
    <string name="l17">L17</string>
    <string name="l18">L18</string>
    <string name="l47">L47</string>
    <string name="l48">L48</string>
    <string name="l19">L19</string>
    <string name="l20">L20</string>
    <string name="l49">L49</string>
    <string name="l50">L50</string>
    <string name="l21">L21</string>
    <string name="l22">L22</string>
    <string name="l51">L51</string>
    <string name="l52">L52</string>
    <string name="l23">L23</string>
    <string name="l24">L24</string>
    <string name="l53">L53</string>
    <string name="l54">L54</string>
    <string name="l25">L25</string>
    <string name="l26">L26</string>
    <string name="l55">L55</string>
    <string name="l56">L56</string>
    <string name="l27">L27</string>
    <string name="l28">L28</string>
    <string name="l57">L57</string>
    <string name="l58">L58</string>
    <string name="l29">L29</string>
    <string name="l30">L30</string>
    <string name="l59">L59</string>
    <string name="l60">L60</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_launch">Launch</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="silent">Silent</string>
    <string name="title_activity_database_update">DatabaseUpdate</string>

</resources>
