<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/a2" />

    <CheckBox
        android:id="@+id/checkBox22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/ta2" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox
        android:id="@+id/checkBox16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/b2" />
    
     <CheckBox
        android:id="@+id/checkBox23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/tb2" />
     </LinearLayout>
     

     <LinearLayout
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox
        android:id="@+id/checkBox17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/c2" />
    
     <CheckBox
        android:id="@+id/checkBox24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/tc2" />
     </LinearLayout>
     

     <LinearLayout
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox
        android:id="@+id/checkBox18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/d2" />
    
     <CheckBox
        android:id="@+id/checkBox25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/td2" />
</LinearLayout>

     <LinearLayout 
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checkBox19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/e2" />
    
     <CheckBox
        android:id="@+id/checkBox26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/te2" />
</LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox
        android:id="@+id/checkBox20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/f2" />
    
    
     <CheckBox
        android:id="@+id/checkBox27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/tf2" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <CheckBox
        android:id="@+id/checkBox21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/g2" />
    
     <CheckBox
        android:id="@+id/checkBox28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:text="@string/tg2" />
</LinearLayout> 
    
      <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="getdata"
        android:layout_marginLeft="120dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/submit" />
         
  
       

</LinearLayout>
    
