<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

   

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button1"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:longClickable="true"
        android:onClick="Geteveningslots"
        android:contentDescription="@string/button2"
        android:inputType="none"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/evening_slots" />
 
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/vitlogo"
        android:contentDescription="@string/vitlogo" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:inputType="none"
        android:longClickable="true"
        android:onClick="Getmorningslots"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/morning_slots" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/lab_button" 
        android:inputType="none"
        android:longClickable="true"
        android:onClick="Labslots"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/lab_slots" />
 
</RelativeLayout>
